docs/sf-export/sfdx-raw/objects/Resuffle_Lead_Settings__c/Resuffle_Lead_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Resuffle Lead Settings</label>
</CustomObject>