docs/sf-export/sfdx-raw/objects/Resuffle_Lead_Settings__c/fields/Closer_Pool_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Closer_Pool_Queue_Id__c</fullName>
    <label>Closer Pool Queue Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>