docs/sf-export/sfdx-raw/objects/Resuffle_Lead_Settings__c/fields/Lead_Five9_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Five9_Id__c</fullName>
    <label>Lead Five9 Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>