docs/sf-export/sfdx-raw/objects/Resuffle_Lead_Settings__c/fields/Opportunity_Five9_List_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Five9_List_Id__c</fullName>
    <label>Opportunity Five9 List Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>