docs/sf-export/sfdx-raw/objects/Resuffle_Lead_Settings__c/fields/Opportunity_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Id__c</fullName>
    <label>Opportunity Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>